# Learning.test

./: .gitignore  README.md
C++/: readme.md
DGSL/: GemotryShader.dgsl  GeometryScene2.fbx  Lambert.dgsl  Phong.dgsl  Scene1.fbx  greyShader.dgsl  link.txt  texture.dgsl
Design_pattern/: 23-Partten.md  CMakeLists.txt  readme.md
Design_pattern/ActionPattern/: ChainOfResponsibility.cpp  Command.cpp  Interpreter.cpp  Iterator.cpp  Mediator.cpp  Memento.cpp  Observe.cpp  State.cpp  Strategy.cpp  Visitor.cpp  template.cpp
Design_pattern/CreationalPattern/: AbstractFactory.cpp  Builder.cpp  Factory.cpp  Prototype.cpp  Singleton.cpp
Design_pattern/StructPattern/: Adapter.cpp  Bridge.cpp  Composite.cpp  Decorator.cpp  Facade.cpp  Flyweight.cpp  Proxy.cpp
Design_pattern/UML/: UML.modelproj  UMLClassDiagram1.classdiagram  UMLClassDiagram1.classdiagram.layout
Design_pattern/UML/ModelDefinition/: Package_1717.uml  UML.uml
GFX/KlayGE/KlayGELearning/: CMakeLists.txt
GFX/KlayGE/KlayGELearning/Modules/: Common.cmake
GFX/KlayGE/KlayGELearning/examples/: CMakeLists.txt
GFX/KlayGE/KlayGELearning/examples/InputCaps/: CMakeLists.txt  InputCaps.cpp  InputCaps.hpp  InputCaps.uiml
GFX/KlayGE/KlayGELearning/examples/Tutor1/: CMakeLists.txt  TutorFramework.cpp  TutorFramework.h  main.cpp
GFX/KlayGE/KlayGELearning/examples/Tutor2/: CMakeLists.txt  TutorFramework.cpp  TutorFramework.h  main.cpp
GFX/KlayGE/KlayGELearning/examples/first/: CMakeLists.txt  TutorFramework.cpp  TutorFramework.h  main.cpp
MediaTools/: CMakeLists.txt
MediaTools/mciPlayer/: MCIPlayer.h
MediaTools/sdlPlayer/: CMakeLists.txt
MediaTools/wav/: CMakeLists.txt  WavPlaer.cpp  WavPlaer.h  main.cpp
Pages/: index.html
bat/: Run.bat  callParam.bat  delayParam.bat  input.bat  recursion.bat
blog/: blog.md
book/: book_List.txt
cmake/: CMAKE命令总结.md  CMakeNotes.md  link.txt
cmake/cmake.test/t10/: CMakeLists.txt  config.h.in  main.cc
cmake/cmake.test/t10/math/: CMakeLists.txt  MathFunctions.h  mysqrt.cxx
cmake/cmake.test/t3/lib_hello/: CMakeLists.txt  hello.h
cmake/cmake.test/t5/src/: CMakeLists.txt  main.c
cmake/cmake.test/t6/src/: CMakeLists.txt  main.cpp
cmake/cmake.test/t7/src/: CMakeLists.txt  main.cpp
cmake/cmake.test/t9/: CMakeLists.txt  License.txt  main.cc
cmake/cmake.test/t9/math/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  MathFunctions.vcxproj  MathFunctions.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
cmake/cmake.test/t9/math/MathFunctions.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  MathFunctions.lastbuildstate  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  lib.command.1.tlog
cmake/cmake.test/test_custom_cmd/: CMakeLists.txt
cmake/cmake.test/test_download/: CMakeLists.txt
cmake/cmake.test/vc_dir_generate/: CMakeLists.txt
cmake/cmake_auto_export/: CMakeLists.txt  build.bat  comm.cpp  comm.h  main.cpp
crossplatform/: readme.txt
crossplatform/QtCMakeProj/: .editorconfig  CMakeLists.txt  CMakeSettings.json
crossplatform/QtCMakeProj/cmake/: utility.cmake
crossplatform/QtCMakeProj/include/KernelCommon/: Common.h  export.h
crossplatform/QtCMakeProj/src/: CMakeLists.txt
crossplatform/QtCMakeProj/src/KernelCommon/: CMakeLists.txt  Common.cpp
crossplatform/QtCMakeProj/src/QCityPlanApp/: CMakeLists.txt  main.cpp
crossplatform/QtCMakeProj/src/QtApp/: CMakeLists.txt  main.cpp
crossplatform/QtCMakeProj/src/osgTest/: CMakeLists.txt  main.cpp
crossplatform/QtCMakeProj/tools/linuxDeploy/: deploy.sh
osg/MediaTools/sdlPlayer/: CMakeLists.txt  main.cpp
osg/osg_Learn/: CMakeLists.txt
osg/osg_Learn/code/: CMakeLists.txt
osg/osg_Learn/code/osg3Guide/: CMakeLists.txt
osg/osg_Learn/code/osg3Guide/osg3_4/: CMakeLists.txt  main.cpp
osg/osg_Learn/code/osg3Guide/osg3_5/: CMakeLists.txt  main.cpp
osg/osg_Learn/code/osg3Guide/osg3_6/: CMakeLists.txt  main.cpp
osg/osg_Learn/code/osg3Guide/osg3_7/: CMakeLists.txt  main.cpp
osg/osg_Learn/code/osg3cookBook/: CMakeLists.txt  link.md
osg/osg_Learn/code/osg3cookBook/ch01/: geometry.cpp
osg/osg_Learn/code/osg3cookBook/ch02/: bounding_box.cpp  clone_objects.cpp  observer_ptr.cpp
osg/osg_Learn/code/osg3cookBook/ch03/: NurbsSurface.cpp  clock_face.cpp  draw_instance.cpp  dynamic_ribbon.cpp  select_face.cpp  select_model.cpp  select_point.cpp  vertex_displacement.cpp
osg/osg_Learn/code/osg3cookBook/ch04/: multiple_screen.cpp  power_wall.cpp
osg/osg_Learn/code/osg3cookBook/ch08/: Maze.cpp  compress_texture.cpp  config_pager.cpp  merge_geom.cpp  share_objects.cpp
osg/osg_Learn/code/osg3cookBook/ch09/: osg_qt.cpp
osg/osg_Learn/code/osg3cookBook/ch10/: SIMP_Main.cpp  SIMP_ReaderWriter.cpp  SIMP_ReaderWriter.h  delaunay.cpp  meta_data.cpp
osg/osg_Learn/code/osg3cookBook/ch10/cliTest/: cliTest.cpp  osgWindow.cpp  osgWindow.h
osg/osg_Learn/code/osg3cookBook/comm/: comm.cpp  comm.h
osg/osg_Learn/code/osg3cookBook/data/: build-paths.bat  build-paths_raw.bat  build.bat  build2.bat  buildEarth-wgs84-elevation.bat  buildEarth-wgs84.bat  buildEarth.bat  data.md
osg/osg_Learn/code/osgCallback/: CMakeLists.txt  callback.cpp
osg/osg_Learn/code/osgCamera/: CMakeLists.txt  main.cpp
osg/osg_Learn/code/osgPagedLOD/: CMakeLists.txt  main.cpp
osg/osg_Learn/code/osgPick/: CMakeLists.txt  main.cpp
osg/osg_Learn/code/osgQtApp/: CMakeLists.txt  SkyBox.cpp  SkyBox.h  main.cpp
osg/osg_Learn/code/osgqfont/: CMakeLists.txt
osg/osg_Learn/code/osgviewerMFC/: CMakeLists.txt
osg/osg_Learn/code/qt_app/QtMultThread/QtMultThread/: QtMultThread.pro  main.cpp  qgraphicwindow.cpp  qgraphicwindow.h
osg/osg_Learn/test/: main.cpp
qt/TestQWindow/: CMakeLists.txt  TestQWindow.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
qt/qtandVS/: CMakeLists.txt  calculator.ui  main.cpp
system/code/: CMakeLists.txt  Lambda.hpp  main.cpp
system/code/comm/: SRWLock.cpp  SRWLock.h
wxWidgets/: CMakeLists.txt
wxWidgets/test/: CMakeLists.txt  main.cpp  main.h
(+395 files in other folders)
